# AI-Cohort-July-2025

./: .coverage  .dockerignore  .env  .env.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_SETUP.md  Dockerfile  FRONTEND_QA_VALIDATION_REPORT.md  Gemfile  Makefile  PHASE1_COMPLETION_SUMMARY.md  PHASE2_DEPLOYMENT_STRATEGY.md  PHASE4_COMPLETION_REPORT.md  PHASE4_FRONTEND_TEST_REPORT.md  PHASE7_COMPLETION_REPORT.md  README-Docker.md  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  _config.yml  bandit-report.json  demo.txt  dev-setup.sh  docker-compose.yml  docker-start.sh  docker-stop.sh  hybrid-CLAUDE.md  index.md  optimization-metrics.md  optimize-claude.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js  z_next.txt  z_notes.txt
.devcontainer/: bootstrap.sh
.github/: CLAUDE_INTEGRATION_GUIDE.md  markdown-link-check-config.json  markdown-link-check-external.json  setup-claude-integration.sh
AutoDevHub/: .gitignore  README.md
artifacts/: adr.md  prd.md  schema.sql  seed.sql
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  TEST_SUITE_SUMMARY.md  __init__.py  config.py  database.py  dependencies.py  init_db.py  main.py  models.py  pytest.ini  requirements.txt  schemas.py  test_story_generation.py
deployment/: README.md
docs/: ARCHITECTURE.md  ISSUE_TRIAGE_REPORT.md  PRD.md  QA_MONITORING_LOG.md  QUALITY_REPORT.md  contacts.md  index.html  index.md  under-construction.md
frontend/: .dockerignore  .env  .env.example  CI_CD_FIX_SUMMARY.md  README.md  RELEASE_NOTES.md  (+6 more)
(+120 files in other folders)
